# awesome-claude

./: .gitignore  CLAUDE.md  README.md
claudecode/: CLAUDE.md  Claude Code 下载安装.md  claude-bedrock.env  ec2-userdata.sh  settings.local.json
claudecode/proxy-detector/: README.md  README_CN.md  detect.py  detection_report.json  monitor.py
cost-saving/image-moderation/: .gitignore  README.md  README_CN.md  SKILL.md  pyproject.toml
cost-saving/image-moderation/examples/: basic_moderation.py  batch_moderation.py
cost-saving/image-moderation/image_moderation/: client.py  pipeline.py  prefilter.py  preprocessing.py
github-actions/llm-review/: README.md
prompts/frontend-generation/: prompt.md
prompts/ppt-generation/: prompt.md
skills/aggregated-search/: SKILL.md
skills/aws-diagram/: SKILL.md  aws-infrastructure.py
skills/beautiful-hackathon-slides/: LICENSE  README.md  SKILL.md
skills/browser-test/: SKILL.md
skills/browser-use-agentcore/: LICENSE.txt  SKILL.md
skills/card-diagram/: SKILL.md
skills/docgen/: SKILL.md
skills/excel/: SKILL.md
skills/git-check/: SKILL.md
skills/git-commit/: SKILL.md
skills/git-review/: SKILL.md
skills/hottrend-article/: SKILL.md
skills/hottrend-quick/: SKILL.md
skills/hottrend-series/: SKILL.md
skills/hottrend-series-plan/: SKILL.md
skills/html-ppt/: SKILL.md  STYLE_PRESETS.md  animation-patterns.md  viewport-base.css
skills/image-moderation/: README.md
skills/pdf/: SKILL.md
skills/ppt/: SKILL.md
skills/ppt-speech-script/: SKILL.md
skills/product-review/: SKILL.md
skills/reveal-ppt/: SKILL.md
(+59 files in other folders)
